[project]
name = "ref2image-agent"
version = "1.0.0"
description = "Upload reference images, auto-extract features, generate images, evaluate consistency, and iteratively refine until outputs match your references."
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.0",
    "google-cloud-aiplatform[agent_engines,adk]>=1.112",
    "google-auth",
    "requests",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.agents-cli]
agent_directory = "."

[tool.agents-cli.create_params]
deployment_target = "agent_runtime"
